# samba

./: .bzrignore  .clang-format  .clang_complete  .clangd  .codespellignore  .codespellrc  .cvsignore  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci-coverage-runners.yml  .gitlab-ci-coverage.yml  .gitlab-ci-default-runners.yml  .gitlab-ci-default.yml  .gitlab-ci-main.yml  .gitlab-ci-private.yml  .gitlab-ci.yml  .gitleaks.toml  .mailmap  .testr.conf  .travis.yml  .ycm_extra_conf.py  10kcommit.txt  Announce  BRANCH.TODO  BUGS.txt  BUGS4.txt  BUILD_SYSTEMS.txt  ChangeLog  GPG_AA99442FB680B620_replaces_6F33915B6568B7EA.txt  LICENSE  MAINTAINERS  MAINTAINERS.txt  Makefile  Makefile.am  Makefile.am.common  Makefile.in  Manifest  NEWS  (+89 more)
admin/: ChangeLog  Makefile.am  add.c  admin_locl.h  ank.c  change.c  copy.c  delete.c  destroy.c  dump.c  extkeytab.c  get.c  gettime.c  init.c  kdb_edit.8  kdb_edit.c  ktutil-commands.in  ktutil.8  ktutil.c  ktutil_locl.h  life.c  list.c  load.c  misc.c  mod.c  purge.c  remove.c  rename.c  srvconvert.c  srvcreate.c  util.c
appl/: Makefile.am
appl/afsutil/: ChangeLog  Makefile.am  afslog.1  afslog.c  pagsh.1  pagsh.c
appl/dceutils/: k5dce.h  (+4 more)
ctdb/: .bzrignore  .gitignore  Makefile  Makefile.in  NEWS  README  README.Coding  autogen.sh  config.guess  config.h  config.h.in  config.mk  config.status  configure  configure.ac  configure.rpm  ctdb.h  ctdb.pc.in  ctdb_bench.c  ctdb_daemon.c  ctdb_fetch.c  ctdb_private.h  ctdb_tcp.c  ctdb_tcp_child.c  ctdb_test.c  includes.h  test_commit.txt  util.c  wscript
doc/: 1510revision.txt  Makefile.am  ack.texi  apps.texi  copyright.texi  doxytmpl.dxy  draft-foo3.ms  draft-ietf-cat-kerb-chg-password-00.txt  draft-ietf-cat-kerb-chg-password-01.txt  draft-ietf-cat-kerb5gss-07.txt  draft-ietf-cat-kerberos-passwords-02.txt  gssapi.din  hcrypto.din  hdb.din  header.html  heimdal.css  heimdal.texi  hx509.din  hx509.texi  install.texi  intro.texi  kerberos4.texi  krb5.din  migration.texi  misc.texi  ntlm.din  oid.txt  programming.texi  setup.texi  tut.texi  version.texi  whatis.texi  win2k.texi  wind.din
docs/: .bzrignore  INSTALL.txt  MIRRORS  Makefile  Makefile.in  Makefile.settings.in  NT4-Locking.txt  OS2.txt  README  README-NOW  README.OS2  README.Win2kSP2  README.Win32-Viruses  README.idmap-and-winbind-changes  README.ldap  README.pam_smbpass  Samba-Developers-Guide.ps  Samba-HOWTO-Collection.ps  Samba.desktop  THANKS  VFS.txt  Warp.txt  Win9X-CacheHandling.reg  WinXP_SignOrSeal.reg  aclocal.m4  announce  configure.ac  configure.in  db2latex-xslt-strict.diff  docbook.txt  docs-status  global.ent  history  htmldocs.html  roadmap-3.html  samba.faq  samba.lsm  settings.xsl.in  structure.dia
docs-xml/: .gitignore  Makefile  Makefile.settings.in  README  configure.ac  generate-pathconf-entities.sh  htmldocs.html  wscript_build
himmelblaud/: Cargo.toml  build.rs  wscript_build
include/: .cvsignore  Makefile.am  Makefile.in  bits.c  make_crypto.c
kadmin/: ChangeLog  Makefile.am  add-random-users.c  add_enctype.c  ank.c  check.c  cpw.c  del.c  del_enctype.c  dump-format.txt  dump.c  ext.c  get.c  init.c  kadm_conn.c  kadmin-commands.in  kadmin.8  kadmin.c  kadmin_locl.h  kadmind.8  kadmind.c  list.c  load.c  mod.c  pw_quality.c  random_password.c  rename.c  rpc.c  server.c  stash.c  test_util.c  util.c  version4.c
kcm/: .cvsignore  Makefile.am  acl.c  acquire.c  cache.c  client.c  config.c  connect.c  cursor.c  events.c  glue.c  headers.h  kcm.8  kcm_locl.h  log.c  main.c  protocol.c
kdc/: .cvsignore  524.c  Makefile.am  ank.c  config.c  connect.c  default_config.c  digest.c  headers.h  hprop-common.c  hprop.8  hprop.c  hprop.h  hpropd.8  hpropd.c  kadb.h  kaserver.c  kdc-protos.h  kdc-replay.c  kdc.8  kdc.c  kdc.h  kdc_locl.h  kerberos4.c  kerberos4.h  kerberos5.c  krb5tgs.c  kstash.8  kstash.c  kx509.c  load.c  log.c  main.c  misc.c  mit_dump.c  pkinit.c  process.c  rx.h  set_dbinfo.c  srv2keytab.c  (+6 more)
kpasswd/: Makefile.am  kpasswd-generator.c  kpasswd.1  kpasswd.c  kpasswd_locl.h  kpasswdd.8  kpasswdd.c
kuser/: Makefile.am  copy_cred_cache.1  copy_cred_cache.c  generate-requests.c  kauth_options.c  kdecode_ticket.c  kdestroy.1  kdestroy.c  kdigest-commands.in  kdigest.1  kdigest.c  kfoo.c  kgetcred.1  kgetcred.c  kimpersonate.1  kimpersonate.c  kinit.1  kinit.c  kinit_options.c  klist.1  klist.c  krenew.c  kswitch.c  kuser_locl.h  kverify.c
lib/: Makefile.am  README  update-external.sh  wscript_build
po/: Makefile.am  asn1-1765328384.pot  com_err-1750206208.pot  com_err-1765328384.pot  com_err-1980176640.pot  com_err-969269760.pot  com_err1859794432.pot  com_err35224064.pot  com_err36150272.pot  com_err39525376.pot  com_err43787520.pot  com_err569856.pot  gen-po.in  heimdal_krb5.pot  localefiles
rust/: .gitignore  Cargo.toml  build.rs  rustfmt.toml  wscript_build
source/: .cvsignore  .indent.pro  .valgrind_suppressions  CodingSuggestions  Doxyfile  Makefile  Makefile.RPM  Makefile.core  Makefile.in  Makefile.lib  README  SConstruct  TODO  VERSION  acconfig.h  aclocal.m4  arcfour.h  architecture.doc  autogen.sh  cgi.c  change-log  clientinfo.c  clientipc.c  clientprint.c  clientsmb.c  compiler.m4  config.guess  config.list  config.sub  configure  configure.ac  configure.developer  configure.in  configure.nodebug.developer  configure.tridge.opt  display.c  dynconfig.c  dynconfig.h  dynconfig.mk  extra_cflags.txt  (+73 more)
source4/: .clang_complete  .cvsignore  .testr.conf  .valgrind_suppressions  Makefile  Makefile.in  Makefile.waf  NEWS  SConstruct  TODO  VERSION  aclocal.m4  autogen-autotools.sh  autogen-waf.sh  autogen.sh  configure  configure.ac  configure.developer  configure.in  configure.waf  dynconfig.c  dynconfig.h  dynconfig.mk  foo.py  headermap.txt  main.mk  min_versions.m4  provision.ldif  py_echo.c  py_echo.h  registry.ldif  rules.mk  samba3_nmbd.patch  samba4-knownfail  samba4-quick  samba4-skip  secrets.ldif  smbadduser  static_deps.mk  wscript  (+1 more)
tools/: Makefile.am  build.sh  heimdal-build.sh  heimdal-gssapi.pc.in  kdc-log-analyze.pl  krb5-config.1  krb5-config.in
(+28282 files in other folders)
